# refcollector

./: .gitignore  README.md  pyproject.toml
example/: biblio.bib  main.tex
refcollector/: __init__.py  __main__.py  collect_refs.py  html_render.py  latex_unicode.py  pdf_lineno.py  tex_scanner.py
